# SubsPro

./: .replit  admin.html  app.py  index.html  index_simple.html  pyproject.toml
persistent_data/: subspro.db  subspro_backup_1747356504.db
